13. 기존 포스트 조회 기능 통과하는 테스트 작성